# gfm-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  examen.py  pyproject.toml  run_index_dataset.sh  run_stage3_qa_ircot_inference.sh  run_state2_qa_finetune.sh
docs/: CHANGELOG.md  index.md
gfmrag/: gfmrag_retriever.py
gfmrag/datasets/: qa_dataset.py
gfmrag/kg_construction/: langchain_util.py  openie_extraction_instructions.py  utils.py
gfmrag/kg_construction/entity_linking_model/: __init__.py  colbert_el_model.py  dpr_el_model.py
gfmrag/kg_construction/ner_model/: llm_ner_model.py
gfmrag/kg_construction/openie_model/: llm_openie_model.py
gfmrag/llms/: __init__.py  gemini.py  mistral.py
gfmrag/ultra/: util.py
gfmrag/ultra/rspmm/: rspmm.py
gfmrag/utils/: setup_training.py  util.py
gfmrag/workflow/: stage1_index_dataset.py  stage2_qa_finetune.py  stage3_qa_ircot_inference.py
gfmrag/workflow/config/: exp_visualize_path.yaml  stage1_index_dataset.yaml  stage2_qa_finetune.yaml  stage3_qa_inference.yaml  stage3_qa_ircot_inference.yaml
gfmrag/workflow/config/agent_prompt/: hotpotqa_ircot.yaml
gfmrag/workflow/config/el_model/: itc_bge.yaml  itc_nomic_ai.yaml
gfmrag/workflow/config/ner_model/: llm_ner_model.yaml
gfmrag/workflow/config/openie_model/: llm_openie_model.yaml
gfmrag/workflow/config/qa_prompt/: hotpotqa.yaml  itc.yaml
gfmrag/workflow/config/text_emb_model/: bge-m3.yaml  nomic_ai.yaml
gfmrag/workflow/experiments/: visualize_path.py
